--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hello, World!</h1>
+    <h1>Hello, World!!</h1>
     <p>This is a web app created using terraform.</p>
     <script src="app.js"></script>
 </body>
